Change points to per cent

--- a/lab1/lab-1-new.tex
+++ b/lab1/lab-1-new.tex
@@ -38,9 +38,9 @@ Järgneva ülesande eesmärk on näidata kui oluline võib olla algoritmi valik 
 \begin{problem}
 \textbf{Ülesanne 1}
 \begin{enumerate}
-   \item[a)] (20p) Implementeerida liides \textit{Fibonacci} kasutades otse Fibonacci arvu definitsioonist tulenevat rekursiivset algoritmi (\url{https://et.wikipedia.org/wiki/Fibonacci_jada}). Leida suurim indeks, millele vastavat Fibonacci arvu on 
+   \item[a)] (20\%) Implementeerida liides \textit{Fibonacci} kasutades otse Fibonacci arvu definitsioonist tulenevat rekursiivset algoritmi (\url{https://et.wikipedia.org/wiki/Fibonacci_jada}). Leida suurim indeks, millele vastavat Fibonacci arvu on 
 arvuti võimeline välja arvutama 1 sekundi jooksul, kasutades seda implementatsiooni. Rakendada implementatsiooni programmis ja lisada tulemus Moodlesse kommentaarina. 
-    \item[b)] (10p) Implementeerida sama liides, kasutades järgnevat algorimi: 
+    \item[b)] (10\%) Implementeerida sama liides, kasutades järgnevat algorimi: 
 \begin{lstlisting}
 public int fibonacci(int n) {
         if (n == 0){
@@ -70,19 +70,19 @@ Teha kindlaks, kui kaua aega kulub antud implementatsiooniga eelmises punktis le
 \textbf{Ülesanne 2}
 
 \begin{enumerate}
-\item[a)] (30p) Implementeerida liides \textit{Sorter}, kasutades implementatsioonis üht ruutkeerukusega
+\item[a)] (30\%) Implementeerida liides \textit{Sorter}, kasutades implementatsioonis üht ruutkeerukusega
 (keskmise ajalise keerukuse hinnanguga $\Theta(n^2)$) algoritmi järjendi elementide
 ümberpaigutamiseks mittekahanevasse järjekorda.  Sellisteks
 algoritmideks on näiteks mullimeetod ({\it bubble sort}), valikumeetod
 ({\it selection sort}), pistemeetod ({\it insertion sort}) jt.
 Implementatsiooni testimisel mitte unustada nn äärejuhte (järjendid pikkusega 0 või 1, sorditud järjend, vastupidises suunas sorditud
 järjend).
-\item[b)] (30p) Implementeerida liides \textit{Sorter}, kasutades üht keskmise ajalise
+\item[b)] (30\%) Implementeerida liides \textit{Sorter}, kasutades üht keskmise ajalise
 keerukuse hinnanguga  $ \Theta(n\log n)$ algoritmi järjendi elementide
 ümberpaigutamiseks mittekahanevasse järjekorda. Sellisteks algoritmideks
 on näiteks kiirmeetod ({\it quick sort}), ühildusmeetod ({\it merge
 sort}), Shelli meetod ({\it Shell sort}) jt. Implementatsiooni testimisel pidada silmas ka äärejuhte.
-\item[c)] (10p) Koostada kahe implementatsiooni võrdlusgraafik(ud), mis ilmekalt
+\item[c)] (10\%) Koostada kahe implementatsiooni võrdlusgraafik(ud), mis ilmekalt
 demonstreeriksid kahe valitud algoritmi tööaja kasvu vastavalt sorditavate järjendite pikkuste kasvule. Kolmandaks olgu joonisele lisatud ka süsteemse sortimismeetodi tööaja graafik (\textit{java.util.Collections.sort}). 
 
 Kui võimalik, siis tuua graafik ka mingi äärejuhu kohta, kus esimeses punktis kasutatud algoritm on kiirem teises punktis kasutatud algoritmist.
