--- a/lab1/lab-1-new.tex
+++ b/lab1/lab-1-new.tex
@@ -22,8 +22,7 @@ Algoritmi ajaline keerukus määrab ka algoritmi praktilise
 rakendatavuse piiri: väga kiiresti kasvava keerukusfunktsiooniga
 algoritmi tasub realiseerida vaid väikesemahuliste ülesannete jaoks.
 
-Ajalise keerukuse empiiriliseks hindamiseks (ja vastavate graafikute
-joonistamiseks) tuleb mõõta programmi tööaega erinevate algandmemahtude
+Ajalise keerukuse empiiriliseks hindamiseks tuleb mõõta programmi tööaega erinevate algandmemahtude
 korral.
 
 Javas saab seda teha näiteks järgnevalt:
@@ -38,9 +37,9 @@ Järgneva ülesande eesmärk on näidata kui oluline võib olla algoritmi valik 
 \begin{problem}
 \textbf{Ülesanne 1}
 \begin{enumerate}
-   \item[a)] (20\%) Implementeerida liides \textit{Fibonacci} kasutades otse Fibonacci arvu definitsioonist tulenevat rekursiivset algoritmi (\url{https://et.wikipedia.org/wiki/Fibonacci_jada}). Leida suurim indeks, millele vastavat Fibonacci arvu on 
-arvuti võimeline välja arvutama 1 sekundi jooksul, kasutades seda implementatsiooni. Rakendada implementatsiooni programmis ja lisada tulemus Moodlesse kommentaarina. 
-    \item[b)] (10\%) Implementeerida sama liides, kasutades järgnevat algorimi: 
+   \item[a)] (20\%) Implementeerida liides \textit{Fibonacci}, kasutades otse Fibonacci arvu definitsioonist tulenevat rekursiivset algoritmi (\url{https://et.wikipedia.org/wiki/Fibonacci_jada}). Leida suurim indeks, millele vastavat Fibonacci arvu on 
+arvuti võimeline välja arvutama 1 sekundi jooksul, kasutades seda implementatsiooni. Rakendada implementatsiooni programmis ja lisada tulemus Moodle'isse kommentaarina. 
+    \item[b)] (10\%) Implementeerida sama liides, kasutades järgnevat iteratiivset algorimi: 
 \begin{lstlisting}
 public int fibonacci(int n) {
         if (n == 0){
@@ -60,7 +59,7 @@ public int fibonacci(int n) {
         return bigger;
     }
 \end{lstlisting}
-Teha kindlaks, kui kaua aega kulub antud implementatsiooniga eelmises punktis leitud indeksiga Fibonacci arvu leidmiseks. Lisada tulemus Moodlesse kommentaarina.
+Teha kindlaks, kui kaua aega kulub antud implementatsiooniga eelmises punktis leitud indeksiga Fibonacci arvu leidmiseks. Lisada tulemus Moodle'isse kommentaarina.
 
 \end{enumerate}
 
