--- a/lab2/lab-2.tex
+++ b/lab2/lab-2.tex
@@ -7,6 +7,8 @@
 
 \begin{document}
 
+\textbf{Kodutöö esitamise tähtaeg: 1. oktoober, 23:59}
+
 \section*{Variantide läbivaatamine ja kombinatoorika}
 
 Järgnevad ülesanded tuleks lahendada rekursiivsete funktsioonide abil,
