--- a/lab2/lab-2.tex
+++ b/lab2/lab-2.tex
@@ -22,10 +22,8 @@ Kombinatsioone, permutatsioone ja muid valikuid teostavaid standardfunktsioone k
 \textbf{Ülesanne 1}
 \begin{enumerate}
 \item 
-Kirjutada rekursiivne funktsioon, mis väljastab ekraanile kõik
-bittvektorid, mille pikkus on võrdne etteantud arvuga.
-\item
-Modifitseerida seda funktsiooni nii, et ekraanile väljastamise asemel funktsioon tagastaks kõikide sobivate bittvektorite hulga. Modifitseeritud funktsioon peaks implementeerima liidest \textit{BitVectorGenerator}.
+Kirjutada rekursiivne meetod, mis väljastab ekraanile kõik
+bitivektorid, mille pikkus on võrdne etteantud arvuga. Modifitseerida seda meetodit nii, et ekraanile väljastamise asemel meetod tagastaks kõikide sobivate bitivektorite hulga. Modifitseeritud meetod peaks implementeerima liidest \textit{BitVectorGenerator}.
 \end{enumerate}
 \end{problem}
 
@@ -35,45 +33,41 @@ Modifitseerida seda funktsiooni nii, et ekraanile väljastamise asemel funktsioo
 Implementeerida liides \textit{SubSetGenerator}.
 \begin{enumerate}
 \item
-Kirjutada rekursiivne funktsioon \textit{allSubsets}, mis tagastab määratud hulga kõik alamhulgad.
+Implementeerida rekursiivne meetod \textit{allSubsets}, mis tagastab määratud hulga kõik alamhulgad.
 \item
-Kirjutada rekursiivne funktsioon \textit{allSubsetsOfSizeK}, mis tagastab määratud hulga kõik alamhulgad, kus on täpselt \textit{k} elementi.
+Implementeerida rekursiivne meetod \textit{allSubsetsOfSizeK}, mis tagastab määratud hulga kõik alamhulgad, kus on täpselt \textit{k} elementi.
 \end{enumerate}
 \end{problem}
 
 \begin{problem}
 \textbf{Ülesanne 3}
+\newline
+Implementeerida liides \textit{PermutationGenerator}.
 \begin{enumerate}
 \item
-Kirjutada rekursiivne funktsioon, mis võtab parameetriks listi A ja tagastab listi, mis koosneb kõikidest listi A permutatsioonidest.
-Funktsioon peaks implementeerima liidest \textit{PermutationGenerator}.
-\item
-Seda funktsiooni katsetades teha kindlaks maksimaalne sõnepikkus, mille korral see funktsioon töötab veel alla $1$
-sekundi.
+Implementeerida rekursiivne meetod, mis võtab parameetriks listi A ja tagastab listi, mis koosneb kõikidest listi A permutatsioonidest.
 \end{enumerate}
 \end{problem}
 
 \begin{problem}
 \textbf{Ülesanne 4}
 \newline
-\textbf{Järgmistest ülesannetest valida üks ja lahendada see.} Vajalikud andmed genereerida juhuslikult sobivast
-arvuvahemikust. Valitud ülesande lahendusprogramm peab sisaldama mõistliku arvu teste.
+\textbf{Järgmistest ülesannetest valida üks ja lahendada see.}
 
 \begin{enumerate}
-\item[a)] {\em Bobimeeskonna koostamine.} $n$-liikmelisest
+\item[a)] {\em Bobimeeskonna koostamine.} Realiseerida liides \textit{BobsledTeam}. $n$-liikmelisest
 treeningrühmast ($n=10 \pm 2$) tuleb eelolevaks võistluseks välja valida
 neljase bobi meeskond. Treeningrühma iga liikme kohta on antud nimi,
 kaal ja naturaalarvuline reiting (mis näitab treenituse taset).
-Kirjutada programm, mis leiab sellise bobimeeskonna, mille kogukaal ei
+Implementeerida meetod \textit{selectTeam}, mis leiab sellise bobimeeskonna, mille kogukaal ei
 ületa etteantud väärtust ja mille reitingute summa on võimalikult suur.
-Realiseerida liides \textit{BobsledTeam}.
 
- \item[b)] {\em Sobivaima töörühma väljavalimine.} Antud on töötajate
+ \item[b)] {\em Sobivaima töörühma väljavalimine.} Implementeerida liides \textit{HarmonicWorkgroup}. Antud on töötajate
 nimekiri ja sobivusmaatriks $(s_{ij})$, mille element $s_{ij}$ näitab töötajate
 $i$ ja $j$ vastastikuse sobivuse taset reaalarvuna lõigul $[0;1]$.
-Kirjutada programm, mis leiab võimalikult suure rühma töötajaid, mille
+Implementeerida meetod \textit{selectWorkgroup}, mis leiab võimalikult suure rühma töötajaid, mille
 korral vastastikuste sobivuste keskmine on suurem kui 0{,}5.
-Realiseerida liides \textit{HarmonicWorkgroup}.
+
 
  \item[c) ] {\em Praktikumijuhendajaga kokkuleppel} valida ise üks
 ülesanne, mille lahendusalgoritm vajab kõikide variantide läbivaatamist
@@ -84,9 +78,9 @@ Nõutav on, et see ülesanne teeks midagi "`kasulikku"'.
 
 \section*{Lihtsamad puud}
 
-Puu on hierarhiline andmestruktuur, mis koosneb \textbf{tippudest} (ehk sõlmedest; inglise keeles \emph{nodes} või \emph{vertices}), ja nende vahelistest \textbf{kaartest} \emph{(edges)}. Kaared ühendavad tippu tema \textbf{vanemaga} \emph{(parent)} ning \textbf{lastega} \emph{(children)}. Igas mittetriviaalses\footnote{Triviaalne puu on niisugune puu, mis ei sisalda ühtegi tippu ega kaart, ehk tühi puu.} puus eksisteerib üks teistest erinev tipp, mida nimetatakse \textbf{juureks} \emph{(root)}. Igal tipul on täpselt üks vanem, v.a. juurtipp, millel ei ole vanemat. Tippe, millel ei ole lapsi, nimetatakse \textbf{lehtedeks} (\emph{leafs}). Täpsemalt puudest ja nende tüüpidest räägitakse hilisemates loengutes.
+Puu on hierarhiline andmestruktuur, mis koosneb \textbf{tippudest} (ehk sõlmedest; inglise keeles \emph{nodes} või \emph{vertices}), ja nende vahelistest \textbf{servadest} \emph{(edges)}. Servad ühendavad tippu tema \textbf{vanemaga} \emph{(parent)} ning \textbf{lastega} \emph{(children)}. Igas mittetriviaalses\footnote{Triviaalne puu on niisugune puu, mis ei sisalda ühtegi tippu ega kaart ehk tühi puu.} puus võib eristada üht tippu, mida nimetatakse \textbf{juureks} \emph{(root)}. Igal tipul on täpselt üks vanem v.a juurtipp, millel ei ole vanemat. Tippe, millel ei ole lapsi, nimetatakse \textbf{lehtedeks} (\emph{leafs}). Täpsemalt puudest ja nende tüüpidest räägitakse hilisemates loengutes.
 
-Selles praktikumis me vaatleme üht lihtsamat puutüüpi --- \textbf{kahendpuud}. Kahendpuu tippudel võib olla maksimaalselt kaks last, mille järjekord on tavaliselt tähtis (on \emph{vasak} ja \emph{parem} laps). Niisuguse puu tipu realisatsioon võib olla järgmine (täielik realisatsioon on toodud lab-2 projektis):
+Selles praktikumis me vaatleme üht lihtsamat puutüüpi --- \textbf{kahendpuud}. Kahendpuu tippudel võib olla maksimaalselt kaks last, mille järjekord on tavaliselt tähtis (öeldakse \emph{vasak} ja \emph{parem} laps). Niisuguse puu tipu realisatsioon võib olla järgmine (täielik realisatsioon on toodud lab-2 projektis):
 
 \begin{lstlisting}
 public class BinaryTreeVertex<Data>{
@@ -98,27 +92,27 @@ public class BinaryTreeVertex<Data>{
 }
 \end{lstlisting}
 
-Järgmised ülesanded eeldavad seda, et etteantud puu on esitatud kasutades seda realisatsiooni.
+Järgmised ülesanded eeldavad seda, et etteantud puu on esitatud, kasutades tippude jaoks projektis antud \textit{BinaryTreeVertex} realisatsiooni.
 
 \begin{problem}
 \textbf{Ülesanne 5}
 \newline
-Implementeerida liidest \textit{BinaryTreeMeasurer}.
+Implementeerida liides \textit{BinaryTreeMeasurer}.
 \begin{enumerate}
 \item
-Kirjutada funktsioon \textit{measureTreeHeight}, mis tagastab etteantud puu kõrguse.
-Kui etteantud juurtipul ei ole ühtegi last, siis funktsioon peaks tagastama 0.
+Implementeerida meetod \textit{measureTreeHeight}, mis tagastab etteantud puu kõrguse.
+Arvestada, et ühetipulise puu kõrgus on 0.
 \item
-Kirjutada funktsioon \textit{countNodes}, mis tagastab etteantud puu tippude arvu (k.a. juur).
+Implementeerida meetod \textit{countNodes}, mis tagastab etteantud puu tippude arvu.
 \item
-Kirjutada funktsioon \textit{countLeaves}, mis tagastab etteantud puu lehtede arvu.
+Implementeerida meetod \textit{countLeaves}, mis tagastab etteantud puu lehtede arvu.
 \end{enumerate}
 \end{problem}
 
 \begin{problem}
 \textbf{Ülesanne 6}
 \newline
-Implementeerida liides \textit{BinaryTreeDataCounter}. Selleks kirjutada funktsioon \textit{countData}, mis tagastab mitu tippu etteantud puust sisaldab funktsiooni argumendina antud väärtust.
+Implementeerida liides \textit{BinaryTreeDataCounter}. Selleks implementeerida meetod \textit{countData}, mis tagastab mitu tippu sisaldab meetodi argumendina saadud väärtust.
 \end{problem}
 
 \url{https://github.com/ut-aa/aa2016-lab2}
