Add correct github link to lab5

--- a/lab5/lab-5.tex
+++ b/lab5/lab-5.tex
@@ -74,7 +74,6 @@ Selles praktikumis keskendume ühele tasakaalustatud kahendotsimispuu implementa
 Kasutades tasakaalustatud kahendpuud implementeerida liides \textit{TreeMap}.
 \end{problem}
 
-
-Liides ja abiklassid kättesaadavad aaddressil \url{https://github.com/vootelerotov/aa-lab-5}.
+Liidesed kättesaadavad aaddressil \url{https://github.com/ut-aa/aa2016-lab5}.
 
 \end{document}
