--- a/lab5/lab-5.tex
+++ b/lab5/lab-5.tex
@@ -16,9 +16,9 @@
 
 Eelmises kodutöös implementeerisime sõnastiku, kasutadeks selleks paisktabelit. Selles kodutöös implementeerime sõnastiku kasutades \textbf{tasakaalustatud kahendotsimispuid}.
 
-Kahendotsimispuu on kahendpuu, mis täidab veel ühte tingimust: 
+Kahendotsimispuu on kahendpuu, mille kõik alampuud täidavad veel üht tingimust: 
 
-Kui puu juurtipus $A$ on kirje $a$, siis kõik puus olevad kirjed, mis on kirjest $a$ väiksemad asuvad $A$ vasakus alampuus ning kõik kirjed, mis on kirjest $a$ suuremad asuvad $A$ paremas alampuus.
+Kui puu juurtipus $A$ on kirje $a$, siis kõik puus olevad kirjed, mis on kirjest $a$ väiksemad asuvad $A$ vasakus alampuus ning kõik kirjed, mis on kirjest $a$ suuremad asuvad $A$ paremas alampuus. 
 
 \begin{figure}[H]
 \centering
@@ -58,22 +58,21 @@ Kui puu juurtipus $A$ on kirje $a$, siis kõik puus olevad kirjed, mis on kirjes
 \caption{Näide kahendotsimispuust, mille kirjeteks on täisarvud.}
 \end{figure}
 
-Kahendotsimispuu on \textbf{peaaegu tasakaalus} parajasti siis, kui kõige pikem tee juurest mingi leheni ei ole rohkem kui 2 korda pikem kui kõige lühem tee juurest mingi leheni.Paneme tähele, et joonisel kujutatud kahendpuu on peaaegu tasakaalus.
 
-Ütleme, et kahendotsimispuu on \textbf{tasakaalus} kui tema alampuude kõrgused on kas võrdsed või üks alampuu on teisest alampuust ühe võrra kõrgem. Paneme tähele, et kui puu on tasakaalus, siis sellest järeldub otse, et puu on peaaegu tasakaalus.
+Ütleme, et kahendotsimispuu on \textbf{tasakaalus}, kui tema alampuude kõrguste vahe on ülimalt üks.
 
-Kahendotsimispuud, kuhu saab elemente lisada ja kust saab elemente eemaldada nii, et puu jääks (peaaegu) tasakaalu, nimetatake (peaaegu) tasakaalustatud kahendotsimispuuks. 
+Kahendotsimispuud, kuhu saab elemente lisada ja kust saab elemente eemaldada nii, et puu jääb tasakaalu, nimetatake tasakaalustatud kahendotsimispuuks. 
 
-Selles praktikumis keskendume ühele tasakaalustatud kahendotsimispuu implementatsioonile, AVL-puule. Praktikumijuhendajaga kokkuleppel on aga võimalik ka implementeerida mõni muu (peaaegu) tasakaalus kahendotsimispuu. Tuntum alternatiiv on \textbf{puna-must puu}, \url{https://en.wikipedia.org/wiki/Red-black_tree}.
+Selles praktikumis keskendume ühele tasakaalustatud kahendotsimispuu implementatsioonile, AVL-puule. Praktikumijuhendajaga kokkuleppel on aga võimalik ka implementeerida mõni muu tasakaalus kahendotsimispuu. Tuntum alternatiiv on \textbf{puna-must puu}, \url{https://en.wikipedia.org/wiki/Red-black_tree}.
 
 
 
 \begin{problem}
 \textbf{Ülesanne}
 
-Kasutades tasakaalustatud kahendpuud implementeerida liides \textit{TreeMap}.
+Kasutades tasakaalustatud kahendpuud, implementeerida liides \textit{TreeMap}.
 \end{problem}
 
-Liidesed kättesaadavad aaddressil \url{https://github.com/ut-aa/aa2016-lab5}.
+Liidesed on kättesaadavad aaddressil \url{https://github.com/ut-aa/aa2016-lab5}.
 
 \end{document}
