Modify lab6 exercise

--- a/lab6/lab-6.tex
+++ b/lab6/lab-6.tex
@@ -14,8 +14,6 @@
 \subsection*{Kuhi}
 }
 
-Valida järgnevast kahest ülesandest \textbf{üks}.
-
 Kompaktse kahendpuu esitamiseks kasutatakse tihti massiivi, kuhu on kirjed
 salvestatud tippude tasemete kaupa. Siis on ajaga $O(1)$ kättesaadavad nii antud
 tipu alluvad kui ka ülemus: kui positsioone nummerdatakse 0-st ja tipu $v$
@@ -46,7 +44,7 @@ kasutades Huffmani algoritmi. Algoritmi kirjelduse võib leida näiteks Jüri Ki
 Algoritmid ja andmestruktuurid, 2003, lehekülgedel 83-86. (kättesaadav moodlest)
 
 \begin{problem}
-\textbf{Ülesanne 2}
+\textbf{Boonusülesanne (2p)}
 
 Realiseerida Huffmani algoritm vastavalt liidesele \textit{HuffmanAlgorithm}.
 \end{problem}
