Add link to bonus exercise's repository

--- a/lab6/lab-6.tex
+++ b/lab6/lab-6.tex
@@ -35,6 +35,8 @@ Kahendkuhja saab kasutada eelistusjärjekorra realiseerimiseks. Eelistusjärjeko
 Kasutades kompaktset kahendpuud implementeerida liides \textit{MinBinaryHeap}.
 \end{problem}
 
+Liidesed on kättesaadavad aaddressil \url{https://github.com/ut-aa/aa2016-lab6}.
+
 Nüüd vaatame ühte rakendust eelistusjärjekorrale.
  
 Tekstide kompaktsemaks esitamiseks ehk pakkimiseks arvuti välismälus võetakse
@@ -49,6 +51,6 @@ Algoritmid ja andmestruktuurid, 2003, lehekülgedel 83-86. (kättesaadav moodles
 Realiseerida Huffmani algoritm vastavalt liidesele \textit{HuffmanAlgorithm}.
 \end{problem}
 
-Liidesed on kättesaadavad aaddressil \url{https://github.com/ut-aa/aa2016-lab6}.
+Boonusülesande liides on kättesaadav aaddressil \url{https://github.com/ut-aa/aa2016-huffman}.
 
 \end{document}
