Add points to lab7 exercise

--- a/lab7/lab-7.tex
+++ b/lab7/lab-7.tex
@@ -88,7 +88,7 @@ t & (c,t,1) & (e,t,1) & (f,t,2) &  \\
 Kasutades üht neist kahest ideest, lahendada järgmine ülesanne:
 
 \begin{problem}
-\textbf{Ülesanne 1}
+\textbf{Ülesanne 1 (40\%)}
 
 Implementeerida graaf vastavalt liidesele \textit{Graph}.
 \end{problem}
@@ -101,10 +101,10 @@ Sageli kasutame graafe nii, et servaga seotud väärtust võib tõlgendada kui k
 
 Loengus olete tutvunud mitme algoritmiga selle probleemi lahendamiseks: Floyd-Warhsalli algoritm, Bellman-Fordi algoritm ja Dijkstra algoritm. 
 
-Kasutades üht kolmest ülalmainitud algoritmist, lahendada järgmine ülesanne. Maksimaalsete punktide saamiseks tuleb ülesanne lahendada Dijkstra algoritmi kasutades.
+Kasutades üht kolmest ülalmainitud algoritmist, lahendada järgmine ülesanne. 60 \% saamiseks tuleb ülesanne lahendada Dijkstra algoritmi kasutades. Kasutades Floyd-Warhsalli või Bellman-Fordi algoritmi, on võimalik saada 40\%.
 
 \begin{problem}
-\textbf{Ülesanne 2}
+\textbf{Ülesanne 2 (40\% - 60\%)}
 
 Implementeerida lühimate teede leidmise algoritm vastavalt liidesele \textit{ShortestPathsFromVertex}.
 \end{problem}
