Add points for lab8

--- a/lab8/lab-8.tex
+++ b/lab8/lab-8.tex
@@ -11,6 +11,7 @@
 
 \textbf{Kodutöö esitamise tähtaeg: 17. detsember, 23:59}
 
+
 {\center
 \subsection*{Minimaalse kaaluga toesuspuu}
 }
@@ -58,8 +59,9 @@ algoritmi: Primi algoritmi ja Kruskali algoritmi.
 
 \begin{problem}
 
-\textbf{Ülesanne 1}
+\textbf{Ülesanne 1 (75\%)}
 Implementeerida minimaalse toesuspuu leidmine kas Primi või Kruskali algoritmiga vastavalt liidesele \textit{MinimumSpanningTreeAlgorithm}.
+15\% punktidest anname graafi implementatsiooni eest. 
 \end{problem}
 
 {\center
@@ -73,7 +75,7 @@ Probleemi sõnastus formaalsemalt võiks olla selline: \textit{olgu meile antud 
 Seni ei ole teada ühtegi efektiivset algoritmi, mis suudaks suvalise täisgraafi korral anda sellele probleemile täpse vastuse. (Efektiivse algoritmi leidmine lahendaks ka ühe olulisema küsimuse informaatikas. Vaata:\newpage \href{https://en.wikipedia.org/wiki/P_versus_NP_problem}{$P$ vs $NP$}). Teada on aga mitmeid algoritme, mis annavad ligikaudseid tulemusi. Näiteks on võimalik leida minimaalne toesuspuu ja see eesjärjestus süvitsi läbida.
 
 \begin{problem}
-\textbf{Ülesanne 2}
+\textbf{Ülesanne 2 (25\%)}
 
 Leida lähend rändkaupmehe ülesandele kasutades minimaalse kaaluga toesuspuud. Implementeerida vastavalt liidesele \textit{ApproximateTravelingSalesman}.
 \end{problem}
